# multicall.py

./: pyproject.toml  readme.md
examples/: daistats.py  mcd_exporter.py
multicall/: __init__.py  call.py  constants.py  multicall.py  signature.py  utils.py
profiler/: bench.py
tests/: conf.json  settings.py  test_call.py  test_multicall.py  test_signature.py
