[tool.poetry]
name = "multicall"
version = "0.7.1"
description = "aggregate results from multiple ethereum contract calls"
authors = ["banteg"]

[tool.poetry.dependencies]
python = "^3.10.0"
eth_retry = "^0.1.17"
aiohttp = "^3.8.1"
web3 = "^6.2.0"
dill = "^0.3.6"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
types-setuptools = "^67.6.0.8"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
